syntax/tests/parsing/errors/other/spread.res
let arr = [...x, ...y]
let [...arr, _] = [1, 2, 3]

let record = {...x, ...y}
let {...x, ...y} = myRecord

let myList = list{...x, ...y}
let list{...x, ...y} = myList
